--- a/style.css
+++ b/style.css
@@ -3,3 +3,51 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+
+/* Styling for the Gallery Section here */
+.gallery-wrapper {
+    display: flex;
+    width: 1512px;
+    height: 987px;
+    padding: 48px 0px;
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
+    background: #FFFFFF;
+}
+
+.content {
+    line-height: 46px; /* 121.053% */
+    align-self: stretch;
+    text-align: center;
+}
+
+h1 {
+    font-family: Noto Sans;
+    font-size: 38px;
+    font-style: normal;
+    font-weight: 600;
+    color: #262626;
+
+}
+
+.gallery {
+    display: flex;
+    align-items: flex-start;
+    background-color: #F5F5F5;
+    gap: 24px;
+}
+
+.lone-picture {
+    flex: 1 0 0;
+    align-self: stretch;
+}
+
+.group-picture {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    flex: 1 0 0;
+}
+/* Gallery styling ends */
