--- a/style.css
+++ b/style.css
@@ -1,5 +1,62 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@600;900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+header {
+    padding: 1% 10%;
+    font-family: 'Noto Sans', sans-serif;
+}
+.logo {
+    font-size: 1rem;
+    font-weight: 900;
+}
+span {
+    color: #EB5757;
+    font-size: 2rem;
+}
+.logo, a {
+    color: #262626;
+}
+header nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+header nav ul {
+    display: flex;
+    gap: 15px;
+}
+header nav ul li {
+    display: inline-block;
+    border: 1px solid #D9D9D9;
+    border-radius: 8px;
+    padding: 10px 14px;
+}
+header nav ul li a {
+    text-decoration: none;
+    font-size: 14px;
+    font-weight: 600;
+}
+.but2 ul li:last-child {
+    background: #EB5757;
+    border: none;
+}
+.but2 ul li:last-child a {
+    color: #FFFFFF;
+}
+header nav > div:last-of-type {
+    display: none;
+}
+/* END OF NAV BAR  */
+
+@media (max-width: 980px) {
+    header nav ul {
+        display: none;
+    }
+    header nav > div:last-of-type {
+        display: revert;
+    }
 }
