--- a/style.css
+++ b/style.css
@@ -8,9 +8,9 @@
 /* Styling for the Gallery Section here */
 .gallery-wrapper {
     display: flex;
-    width: 1512px;
-    height: 987px;
-    padding: 48px 0px;
+    width: 1292px;
+    height: 487px;
+    padding: 30px 0px;
     flex-direction: column;
     align-items: center;
     gap: 8px;
@@ -18,25 +18,24 @@
 }
 
 .content {
-    line-height: 46px; /* 121.053% */
+    line-height: 40px;
     align-self: stretch;
     text-align: center;
 }
 
 h1 {
     font-family: Noto Sans;
-    font-size: 38px;
+    font-size: 30px;
     font-style: normal;
     font-weight: 600;
     color: #262626;
-
 }
 
 .gallery {
     display: flex;
     align-items: flex-start;
     background-color: #F5F5F5;
-    gap: 24px;
+    gap: 20px;
 }
 
 .lone-picture {
@@ -47,7 +46,90 @@ h1 {
 .group-picture {
     display: flex;
     flex-direction: column;
-    gap: 24px;
+    gap: 20px;
     flex: 1 0 0;
 }
 /* Gallery styling ends */
+
+/* Responsiveness */
+@media (max-width: 320px) {
+    .gallery-wrapper {
+        display: flex;
+        flex-direction: column;
+        width: 812px;
+        height: 287px;
+        padding: 10px 0px;
+        gap: 6px;
+    }
+    .content {
+        line-height: 20px;
+    }
+    h1 {
+        font-size: 30px;
+    }
+    
+    .gallery {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 5px;
+    }
+    .lone-picture, .group-picture {
+            flex: 1 0 0;
+            align-self: stretch;
+            gap: 10px;
+    }
+    img {
+        width: 70px;
+        height: 70px;
+    }
+}
+
+
+/* @media (min-width: 768px) {
+    .gallery-wrapper {
+        display: flex;
+        flex-direction: column;
+        width: 912px;
+        height: 387px;
+        padding: 20px 0px;
+        gap: 6px;
+    }
+    .content {
+        line-height: 25px;
+    }
+    h1 {
+        font-size: 35px;
+    }
+    
+    .gallery {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 8px;
+    }
+    .lone-picture, .group-picture {
+        flex: 1 0 0;
+        align-self: stretch;
+        gap: 15px;
+    }
+    img {
+        width: 100px;
+        height: 100px;
+    }
+}
+
+@media (min-width: 1024px) {
+    .gallery-wrapper {
+        display: flex;
+        width: 1412px;
+        height: 487px;
+        padding: 30px 0px;
+        flex-direction: column;
+        gap: 8px;
+    }
+    
+    .content {
+        line-height: 40px;
+    }
+} */
