--- a/style.css
+++ b/style.css
@@ -1,5 +1,96 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Noto Sans', sans-serif;
+}
+
+/* Contact Form */
+.contact {
+    display: flex;
+    height: 35rem;
+    padding-right: 10%;
+}
+
+.contact aside {
+    width: 40rem;
+    height: 35rem;
+    background: url(/sitting.jpeg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.contact form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 50%;
+}
+
+.fhead {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.fhead h1 {
+    font-size: 50px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 60px;
+}
+
+.fhead p {
+    text-align: center;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 22px;
+}
+
+.fcontact {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.fname {
+    display: flex;
+    column-gap: 0.5rem;
+}
+
+.fill {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    margin-bottom: 1rem;
+}
+
+.fill label {
+    font-size: 12px;
+}
+
+.fill input {
+    padding: 0.4rem;
+    background-color: #F5F5F5;
+    border: none;
+    outline: none;
+    border-radius: 0.3rem;
+}
+
+.fill input::placeholder {
+    color: #9b9898;
+}
+
+textarea {
+    background-color: #F5F5F5;
+    border: none;
+    border-radius: 0.3rem;
+    resize: none;
+    overflow: auto;
+    outline: none;
+    padding: 0.5rem;
 }
