--- a/style.css
+++ b/style.css
@@ -52,7 +52,8 @@ h1 {
 /* Gallery styling ends */
 
 /* Responsiveness */
-@media (max-width: 320px) {
+/* Media Query for Mobile Devices */ 
+@media (max-width: 480px) {
     .gallery-wrapper {
         display: flex;
         flex-direction: column;
@@ -85,8 +86,8 @@ h1 {
     }
 }
 
-
-/* @media (min-width: 768px) {
+/* Media Query for Tablets, Ipads */ 
+/* @media (min-width: 481px) and (max-width: 767px) {
     .gallery-wrapper {
         display: flex;
         flex-direction: column;
@@ -117,19 +118,5 @@ h1 {
         width: 100px;
         height: 100px;
     }
-}
-
-@media (min-width: 1024px) {
-    .gallery-wrapper {
-        display: flex;
-        width: 1412px;
-        height: 487px;
-        padding: 30px 0px;
-        flex-direction: column;
-        gap: 8px;
-    }
-    
-    .content {
-        line-height: 40px;
-    }
 } */
+
