--- a/style.css
+++ b/style.css
@@ -1,5 +1,74 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Serif+4:opsz,wght@8..60,500&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
+.why-us{
+    margin: 30px  10%;
+}
+
+.why-us_cont{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    column-gap: 50px;
+}
+
+
+.item_1 h3{
+    font-weight: 500;
+    font-size: 2rem;
+    font-family: 'Source Serif 4', serif;
+    
+}
+
+.item_1 img{
+    width: 90%;
+    margin-top: 30px;
+
+}
+
+
+.item_2 h5{
+    font-weight: 500;
+    font-size: 1.5rem;
+    font-family: 'Noto sans',sans-serif;
+    margin-bottom: 40px;
+}
+
+
+.item_2 p{
+    font-size: 0.8rem;
+    font-family: 'Noto sans',sans-serif;
+    line-height: 1.2rem;
+    margin-top: 1rem;
+}
+
+
+.item_2 span{
+    color: #eb5757;
+}
+
+
+
+
+@media only screen and (max-width: 480px) {
+    .why-us_cont {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .item_1 h3 {
+        font-size: 1.3rem;
+    }
+
+    .item_2 h5 {
+        font-size: 0.9rem;
+    }
+
+    .item_2 p {
+        font-size: 0.8rem;
+    }
+}
+
