--- a/style.css
+++ b/style.css
@@ -1,10 +1,78 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Serif+4:opsz,wght@8..60,500&display=swap');
 
+
+
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Noto Sans', sans-serif;
 }
+
+/* olaide's work here */
+
+header {
+    padding: 1% 10%;
+    font-family: 'Noto Sans', sans-serif;
+}
+
+.logo {
+    font-size: 1rem;
+    font-weight: 900;
+}
+
+span {
+    color: #EB5757;
+    font-size: 2rem;
+}
+
+.logo,
+a {
+    color: #262626;
+}
+
+header nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+header nav ul {
+    display: flex;
+    gap: 15px;
+}
+
+header nav ul li {
+    display: inline-block;
+    border: 1px solid #D9D9D9;
+    border-radius: 8px;
+    padding: 10px 14px;
+}
+
+header nav ul li a {
+    text-decoration: none;
+    font-size: 14px;
+    font-weight: 600;
+}
+
+.but2 ul li:last-child {
+    background: #EB5757;
+    border: none;
+}
+
+.but2 ul li:last-child a {
+    color: #FFFFFF;
+}
+
+header nav>div:last-of-type {
+    display: none;
+}
+
+/* END OF NAV BAR  */
+
+/* flora's work here  */
+
 
 .why-us{
     margin: 30px  10%;
@@ -72,4 +140,246 @@
         font-size: 0.8rem;
     }
 }
+
+
+
+/* betelhem work here  */
+
+/* ada's work here  */
+/* Styling for the Gallery Section here */
+.gallery-wrapper {
+    display: flex;
+    width: 1292px;
+    height: 487px;
+    padding: 30px 0px;
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
+    background: #FFFFFF;
+}
+
+.content {
+    line-height: 40px;
+    align-self: stretch;
+    text-align: center;
+}
+
+h1 {
+    font-family: Noto Sans;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 600;
+    color: #262626;
+}
+
+.gallery {
+    display: flex;
+    align-items: flex-start;
+    background-color: #F5F5F5;
+    gap: 20px;
+}
+
+.lone-picture {
+    flex: 1 0 0;
+    align-self: stretch;
+}
+
+.group-picture {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    flex: 1 0 0;
+}
+/* Gallery styling ends */
+
+/* Responsiveness */
+/* Media Query for Mobile Devices */ 
+@media (max-width: 480px) {
+    .gallery-wrapper {
+        display: flex;
+        flex-direction: column;
+        width: 812px;
+        height: 287px;
+        padding: 10px 0px;
+        gap: 6px;
+    }
+    .content {
+        line-height: 20px;
+    }
+    h1 {
+        font-size: 30px;
+    }
+    
+    .gallery {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 5px;
+    }
+    .lone-picture, .group-picture {
+            flex: 1 0 0;
+            align-self: stretch;
+            gap: 10px;
+    }
+    img {
+        width: 70px;
+        height: 70px;
+    }
+}
+
+/* Media Query for Tablets, Ipads */ 
+/* @media (min-width: 481px) and (max-width: 767px) {
+    .gallery-wrapper {
+        display: flex;
+        flex-direction: column;
+        width: 912px;
+        height: 387px;
+        padding: 20px 0px;
+        gap: 6px;
+    }
+    .content {
+        line-height: 25px;
+    }
+    h1 {
+        font-size: 35px;
+    }
+    
+    .gallery {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 8px;
+    }
+    .lone-picture, .group-picture {
+        flex: 1 0 0;
+        align-self: stretch;
+        gap: 15px;
+    }
+    img {
+        width: 100px;
+        height: 100px;
+    }
+} */
+
+/* stella's work here  */
+
+/* zainab's work here  */
+
+/* Contact Form */
+.contact {
+    display: flex;
+    height: 35rem;
+    padding-right: 10%;
+}
+
+.contact aside {
+    width: 40rem;
+    height: 35rem;
+    background: url(/sitting.jpeg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.contact form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 50%;
+}
+
+.fhead {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.fhead h1 {
+    font-size: 50px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 60px;
+}
+
+.fhead p {
+    text-align: center;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 22px;
+}
+
+.fname {
+    display: flex;
+    column-gap: 0.5rem;
+}
+
+.fill {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    margin-bottom: 1rem;
+}
+
+.fill label {
+    font-size: 12px;
+}
+
+.fill input {
+    padding: 0.4rem;
+    background-color: #F5F5F5;
+    border: none;
+    outline: none;
+    border-radius: 0.3rem;
+}
+
+.fill input::placeholder {
+    color: #9b9898;
+}
+
+textarea {
+    background-color: #F5F5F5;
+    border: none;
+    border-radius: 0.3rem;
+    resize: none;
+    overflow: auto;
+    outline: none;
+    padding: 0.5rem;
+}
+
+/* gloria's work here  */
+
+/* media query  */
+
+@media (max-width: 640px) {
+    header nav ul {
+        display: none;
+    }
+
+    header nav>div:last-of-type {
+        display: revert;
+    }
+
+    .contact {
+        display: flex;
+        flex-direction: column;
+        margin: 1rem 2rem;
+    }
+
+    .contact aside {
+        width: auto;
+        height: 15rem;
+    }
+
+    form {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+
+    .fname {
+        flex-wrap: wrap;
+    }
+}
+
 
