--- a/style.css
+++ b/style.css
@@ -94,6 +94,7 @@ header nav>div:last-of-type {
 
 .item_1 img{
     width: 90%;
+    height: auto;
     margin-top: 30px;
 
 }
@@ -115,8 +116,9 @@ header nav>div:last-of-type {
 }
 
 
-.item_2 span{
+.item_2 #six{
     color: #eb5757;
+    font-size: 1rem;
 }
 
 
