--- a/style.css
+++ b/style.css
@@ -72,25 +72,25 @@ header nav>div:last-of-type {
 
 /* flora's work here  */
 
-.why-us{
-    margin: 30px  10%;
+.why-us {
+    margin: 30px 10%;
 }
 
-.why-us_cont{
+.why-us_cont {
     display: grid;
-    grid-template-columns: repeat(2,1fr);
+    grid-template-columns: repeat(2, 1fr);
     column-gap: 50px;
 }
 
 
-.item_1 h3{
+.item_1 h3 {
     font-weight: 500;
     font-size: 2rem;
     font-family: 'Source Serif 4', serif;
-    
+
 }
 
- .item_1 img{
+.item_1 img {
     width: 95%;
     height: auto;
     margin-top: 30px;
@@ -98,31 +98,31 @@ header nav>div:last-of-type {
 }
 
 
-.item_2 h5{
+.item_2 h5 {
     font-weight: 500;
     font-size: 1.5rem;
-    font-family: 'Noto sans',sans-serif;
+    font-family: 'Noto sans', sans-serif;
     margin-bottom: 40px;
 }
 
 
-.item_2 p{
+.item_2 p {
     font-size: 0.8rem;
-    font-family: 'Noto sans',sans-serif;
+    font-family: 'Noto sans', sans-serif;
     line-height: 1.2rem;
     margin-top: 1rem;
 }
 
 
-.item_2 #six{
+.item_2 #six {
     color: #eb5757;
-    font-size: 1rem;
+    font-size: 1.5rem;
 }
 
 
 
 
-@media only screen and (max-width: 480px) {
+/* @media only screen and (max-width: 480px) {
     .why-us_cont {
         grid-template-columns: repeat(1, 1fr);
     }
@@ -139,7 +139,7 @@ header nav>div:last-of-type {
     .item_2 p {
         font-size: 0.8rem;
     }
-}
+} */
 
 /* betelhem work here  */
 
@@ -181,6 +181,11 @@ h1 {
     gap: 1.3rem;
 }
 
+.group-picture img,
+.lone-picture img {
+    width: 100%;
+}
+
 /* Gallery styling ends */
 
 /* stella's work here  */
@@ -191,7 +196,7 @@ h1 {
 .contact {
     display: flex;
     height: 35rem;
-    margin: 2rem 10% 2rem 0;
+    margin: 2rem 10%;
 }
 
 .contact aside {
@@ -280,7 +285,7 @@ textarea {
     justify-content: center;
     align-items: center;
     column-gap: 1rem;
-    width: 24rem;
+    width: 27rem;
     color: white;
     font-size: 20px;
     background-color: black;
@@ -316,12 +321,20 @@ textarea {
         display: revert;
     }
 
+    /* flora's work here  */
+
+    .why-us_cont {
+        display: grid;
+        grid-template-columns: 1fr;
+        column-gap: 50px;
+    }
+
     /* ada's media query  */
 
     .gallery-wrapper {
         display: flex;
         flex-direction: column;
-        padding: 10px 0px;
+        padding: 10px 10%;
         gap: 6px;
     }
 
@@ -340,7 +353,7 @@ textarea {
 
     .group-picture img,
     .lone-picture img {
-        width: 12rem;
+        width: 100%;
         /* height: 70px; */
     }
 
@@ -356,22 +369,13 @@ textarea {
         row-gap: 1rem;
     }
 
-    .contact aside {
-        width: 18rem;
-        height: 10rem;
-    }
-
-    .fhead {
-        height: auto;
-    }
-
     .fhead h1 {
         font-size: 2.5rem;
     }
 
     form {
         display: flex;
-        justify-content: center;
+        /* justify-content: center; */
         /* width: fit-content; */
     }
 
@@ -380,13 +384,6 @@ textarea {
         flex-direction: column;
     }
 
-    textarea {
-        width: 19rem;
-    }
-
-    .submit {
-        width: 19rem;
-    }
 
     .submit img,
     .smlinks img {
@@ -443,7 +440,7 @@ textarea {
 
     .group-picture img,
     .lone-picture img {
-        width: 27rem;
+        width: 100%;
     }
 
     /* gallery ends here  */
@@ -451,17 +448,12 @@ textarea {
     /* zainab media query */
     .contact {
         display: flex;
-        margin: 1rem 2rem;
         align-items: center;
         height: fit-content;
         row-gap: 1rem;
     }
 
-    .contact aside {
-        width: calc(100/2);
-        height: 100;
-        background-size: cover;
-    }
+
 
     .fhead h1 {
         font-size: 2.5rem;
@@ -476,14 +468,6 @@ textarea {
 
     .fname {
         flex-direction: column;
-    }
-
-    textarea {
-        width: 19rem;
-    }
-
-    .submit {
-        width: 19rem;
     }
 
     .submit img,
