--- a/style.css
+++ b/style.css
@@ -6,41 +6,48 @@
     box-sizing: border-box;
 
 }
-.hero{
+
+.hero {
     margin: 30px 10%;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     height: auto;
-    
+
 }
-.hero-info{
+
+.hero-info {
     width: 50%;
 }
-.hero-info h1{
-   font-size: 50px;
-   margin: 30px 0;
-   font-family: 'Noto Sans', sans-serif;
-   font-weight: 900;
 
-   
+.hero-info h1 {
+    font-size: 50px;
+    margin: 30px 0;
+    font-family: 'Noto Sans', sans-serif;
+    font-weight: 900;
+
+
 }
-.hero-info span{
+
+.hero-info span {
     color: #EB5757;
 }
-.hero-info p{
+
+.hero-info p {
     margin-bottom: 20px;
     font-size: 18px;
     font-family: 'Noto Sans', sans-serif;
     font-weight: 400;
 }
- .hero-info button{
+
+.hero-info button {
     height: 40px;
     width: 80px;
     padding: 10px;
     font-family: n'Noto Sans', sans-serif;
 }
 
-#one{
+#one {
     background-color: #EB5757;
     border: none;
     font-size: 15px;
@@ -49,65 +56,25 @@
     color: white;
 
 }
-#two{
+
+#two {
     background-color: white;
     border: none;
-    border: 1px solid black; 
+    border: 1px solid #D9D9D9;
     margin-left: 20px;
     font-size: 15px;
     text-transform: capitalize;
     border-radius: 5px;
 }
-.hero-image{
+
+.hero-image {
     width: 50%;
 }
-.hero-image img{
-    width: 100%;
-}
-@media (max-width: 320px) {
-    .hero{
-        flex-direction: column;
-    }
-    .hero-info{
-        width: 100%;
-    }
-    .hero-info h1{
-        font-size: 22px;
-        margin: 10px 0;
-}
-.hero-info p{
-    margin-bottom: 10px;
-    font-size: 12px;
-}
-.hero-info button{
-    height: 30px;
-    width: 80px;
-    padding: 5px;
-    margin-bottom: 15px;
-    
-}
-.hero-image{
-    width: 100%;
-    margin-top: 20px;
-}}
 
-
-@media (max-width: 768px) and (min-width: 321px) {
-   
-    .hero-info h1{
-        font-size: 20px;
-        margin: 10px 0;
+.hero-image img {
+    width: 100%;
+    height: 100%;
 }
-.hero-info p{
-    margin-bottom: 20px;
-    font-size: 12px;
-    width: 300px;
-}
-.hero-info button{
-    height: 30px;
-    width: 80px;
-    padding: 5px;
-  }}
 
 
 /* olaide's work here */
@@ -223,26 +190,6 @@ header nav>div:last-of-type {
 }
 
 
-
-
-/* @media only screen and (max-width: 480px) {
-    .why-us_cont {
-        grid-template-columns: repeat(1, 1fr);
-    }
-
-    .item_1 h3 {
-        font-size: 1.3rem;
-    }
-
-    .item_2 h5 {
-        font-size: 0.9rem;
-        margin-top: 1.5rem;
-    }
-
-    .item_2 p {
-        font-size: 0.8rem;
-    }
-} */
 
 /* betelhem work here  */
 
@@ -424,6 +371,41 @@ textarea {
         display: revert;
     }
 
+    /* sadiya's work here  */
+
+    .hero {
+        flex-direction: column;
+    }
+
+    .hero-info {
+        width: 100%;
+    }
+
+    .hero-info h1 {
+        font-size: 22px;
+        margin: 10px 0;
+    }
+
+    .hero-info p {
+        margin-bottom: 10px;
+        font-size: 12px;
+    }
+
+    .hero-info button {
+        height: 30px;
+        width: 80px;
+        padding: 5px;
+        margin-bottom: 15px;
+
+    }
+
+    .hero-image {
+        width: 100%;
+        margin-top: 20px;
+    }
+
+    /* hero page ends here  */
+
     /* flora's work here  */
 
     .why-us_cont {
@@ -519,6 +501,29 @@ textarea {
         font-size: 8px;
         font-weight: 600;
     }
+
+    /* header ends here  */
+
+    /* sadiya's work start here  */
+
+    .hero-info h1 {
+        font-size: 20px;
+        margin: 10px 0;
+    }
+
+    .hero-info p {
+        margin-bottom: 20px;
+        font-size: 12px;
+        width: 300px;
+    }
+
+    .hero-info button {
+        height: 30px;
+        width: 80px;
+        padding: 5px;
+    }
+
+    /* hero page ends here  */
 
     /* ada's media query  */
 
