--- a/style.css
+++ b/style.css
@@ -582,6 +582,146 @@ textarea {
 
 /* gloria's work here  */
 
+footer {
+  background-color: var(--1st, #212832);
+  color: #f5f5f5;
+}
+footer .sixsters-logo {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 1rem;
+}
+
+footer .sixsters-logo span {
+  font-size: 6rem;
+  color: #eb5757;
+}
+footer .sixsters-logo .icons {
+  display: flex;
+  gap: 2rem;
+  fill: #f5f5f5;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.3rem;
+}
+footer .wrapper {
+  justify-content: space-evenly;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  flex-wrap: wrap;
+  font-size: 1rem;
+}
+
+footer .wrapper .services-info-container {
+  display: flex;
+  gap: 5rem;
+  text-transform: capitalize;
+  font-weight: 400;
+  font-size: 1rem;
+  padding-top: -5px;
+}
+footer .wrapper .services-info-container p {
+  margin-top: 1rem;
+}
+footer .wrapper .info-container {
+  display: flex;
+  gap: 5rem;
+  font-size: 1rem;
+  margin-top: 2rem;
+}
+footer .wrapper .info-container h2 {
+  text-transform: capitalize;
+  font-weight: 400;
+  margin-bottom: 0.89rem;
+}
+
+.info-container .contact-container .btn {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  text-transform: capitalize;
+  font-size: 0.875rem;
+  cursor: pointer;
+}
+.info-container .contact-container .btn .media-btn {
+  padding: 0.42rem 0.89rem;
+  border-radius: 0.2rem;
+  border: 1px solid #f5f5f5;
+  background-color: transparent;
+  font-size: 1rem;
+}
+footer .wrapper .info-container .subscribe-container p {
+  margin-top: 2rem;
+}
+
+.info-container .contact-container .btn a {
+  text-decoration: none;
+  color: #f5f5f5;
+  font-size: 1rem;
+}
+.subscribe-container input {
+  margin: 2rem;
+  padding: 0.64rem 2rem;
+  border-radius: 0.89rem;
+  background: #f5f5f5;
+  font-size: 1rem;
+  font-weight: 400;
+  cursor: pointer;
+}
+.subscribe-container button {
+  padding: 0.64rem 0.75rem;
+  background-color: #eb5757;
+  color: white;
+  border: none;
+  text-transform: uppercase;
+  border-radius: 0.2rem;
+  cursor: pointer;
+  transition: box-shadow 0.15s;
+  font-size: 1rem;
+  font-weight: 400;
+}
+
+.subscribe-container button:hover {
+  opacity: 0.7;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.15);
+}
+
+footer hr {
+  width: 100%;
+  margin-top: 2rem;
+}
+footer .web-right {
+  display: flex;
+  justify-content: space-between;
+  margin-left: 8rem;
+  margin-right: 8rem;
+  flex-wrap: wrap;
+  margin-top: 1rem;
+  padding-bottom: 5rem;
+}
+footer .web-right p {
+  display: flex;
+  margin-left: 0.64rem;
+  text-transform: capitalize;
+  font-size: 1rem;
+  font-weight: 400;
+}
+footer .web-right a {
+  margin-left: 1rem;
+  text-decoration: none;
+  color: #f5f5f5;
+  text-transform: capitalize;
+  font-size: 1rem;
+  font-weight: 400;
+}
+
+
+
 /* media query  for mobile phones and a bit wider screens */
 
 @media (max-width: 640px) {
